{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 79,
  "lineage": "c4d4850e-d6eb-f6f7-5f2d-a5ba06ed4b9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:533267130345:instance/i-0430e75ad3a89f162",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0430e75ad3a89f162",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed284655a2e4c0c4",
            "private_dns": "ip-10-100-26-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.26.52",
            "public_dns": "ec2-3-88-128-220.compute-1.amazonaws.com",
            "public_ip": "3.88.128.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b5e8abf1acceb859",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e4fe13433635356",
            "tags": {
              "Name": "ec2-devops"
            },
            "tags_all": {
              "Name": "ec2-devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07e0317fbc587a813"
            ]
          },
          "dependencies": [
            "aws_security_group.sgr-devops",
            "aws_subnet.subnet-devops",
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:internet-gateway/igw-02208e4ed776f121e",
            "id": "igw-02208e4ed776f121e",
            "owner_id": "533267130345",
            "tags": {
              "Name": "igw-devops"
            },
            "tags_all": {
              "Name": "igw-devops"
            },
            "vpc_id": "vpc-0559b45c6eb00c6d5"
          },
          "dependencies": [
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02208e4ed776f121e",
            "id": "r-rtb-0abf75fe1cb668c7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0abf75fe1cb668c7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-devops",
            "aws_route_table.rtb-devpos",
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-devpos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:route-table/rtb-0abf75fe1cb668c7a",
            "id": "rtb-0abf75fe1cb668c7a",
            "owner_id": "533267130345",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtb-devops"
            },
            "tags_all": {
              "Name": "rtb-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0559b45c6eb00c6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fa838ea43e24c82",
            "route_table_id": "rtb-0abf75fe1cb668c7a",
            "subnet_id": "subnet-01e4fe13433635356"
          },
          "dependencies": [
            "aws_route_table.rtb-devpos",
            "aws_subnet.subnet-devops",
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-devops-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0749fa7e96f377994",
            "route_table_id": "rtb-0abf75fe1cb668c7a",
            "subnet_id": "subnet-00c359ee803e25a9d"
          },
          "dependencies": [
            "aws_route_table.rtb-devpos",
            "aws_subnet.subnet-devops-1",
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-devops-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05957a673c4d8e38a",
            "route_table_id": "rtb-0abf75fe1cb668c7a",
            "subnet_id": "subnet-0be9837d9cb913994"
          },
          "dependencies": [
            "aws_route_table.rtb-devpos",
            "aws_subnet.subnet-devops-2",
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgr-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:security-group/sg-07e0317fbc587a813",
            "description": "Security group for DevOps",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e0317fbc587a813",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgr-devops",
            "name_prefix": "",
            "owner_id": "533267130345",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0559b45c6eb00c6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:subnet/subnet-01e4fe13433635356",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e4fe13433635356",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267130345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-devops"
            },
            "tags_all": {
              "Name": "subnet-devops"
            },
            "vpc_id": "vpc-0559b45c6eb00c6d5"
          },
          "dependencies": [
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-devops-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:subnet/subnet-00c359ee803e25a9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c359ee803e25a9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267130345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-devops"
            },
            "tags_all": {
              "Name": "subnet-devops"
            },
            "vpc_id": "vpc-0559b45c6eb00c6d5"
          },
          "dependencies": [
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-devops-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:subnet/subnet-0be9837d9cb913994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be9837d9cb913994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267130345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-devops"
            },
            "tags_all": {
              "Name": "subnet-devops"
            },
            "vpc_id": "vpc-0559b45c6eb00c6d5"
          },
          "dependencies": [
            "aws_vpc.vpc-devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267130345:vpc/vpc-0559b45c6eb00c6d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-05ba5e77bbfadc1e0",
            "default_route_table_id": "rtb-0e13a687c381d08c9",
            "default_security_group_id": "sg-0d5cb04a522a3938f",
            "dhcp_options_id": "dopt-0a674e3f478afb1a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0559b45c6eb00c6d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e13a687c381d08c9",
            "owner_id": "533267130345",
            "tags": {
              "Name": "vpc-devops"
            },
            "tags_all": {
              "Name": "vpc-devops"
            }
          }
        }
      ]
    }
  ]
}